<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_detail_backdrop_image_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/backdrop_picture_content_description"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="@dimen/activity_detail_poster_width"
                android:layout_height="@dimen/activity_detail_poster_height"
                android:layout_marginLeft="30dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster_picture_content_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
                android:layout_marginStart="30dp" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/detail_activity_textview_style"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toRightOf="@+id/tv_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
                tools:text="2018-04-25"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/tv_release_date_label"
                style="@style/detail_activity_textview_style"
                android:layout_marginLeft="20dp"
                android:text="@string/release_date_label"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_user_rating_label"
                style="@style/detail_activity_textview_style"
                android:layout_marginTop="12dp"
                android:text="@string/user_rating_label"
                app:layout_constraintLeft_toLeftOf="@+id/tv_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

            <TextView
                android:id="@+id/tv_user_rating"
                style="@style/detail_activity_textview_style"
                app:layout_constraintLeft_toLeftOf="@+id/tv_release_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                tools:text="7.5" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"/>

            <TextView
                android:id="@+id/txv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txv_trailers"
                tools:listitem="@layout/video_item" />

            <TextView
                android:id="@+id/tv_error_msg_video_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                app:layout_constraintTop_toBottomOf="@+id/txv_trailers"/>

            <ProgressBar
                android:id="@+id/pb_video_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/txv_trailers" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_videos"/>

            <TextView
                android:id="@+id/txv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txv_reviews"
                tools:listitem="@layout/review_item" />

            <TextView
                android:id="@+id/tv_error_msg_review_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                app:layout_constraintTop_toBottomOf="@+id/txv_reviews"/>

            <ProgressBar
                android:id="@+id/pb_review_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/txv_trailers" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_heart_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/colorWhite"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>